# EAI2_Network_Programming

./: README.md
Client/: CMakeLists.txt
Client/Sources/: main.cpp
Service_1/Sources/: main.cpp
Service_2/: CMakeLists.txt
Service_2/Sources/: color_extractor_service.cpp  color_extractor_service.h  main.cpp  ping.cpp  ping.h  weather_api.h
build-Client-Desktop_Qt_6_1_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake
build-Client-Desktop_Qt_6_1_3_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-6ed3f666b89b28024c01.json  cmakeFiles-v1-60fd04156625236f0c2b.json  codemodel-v2-e1b7b9cb3c4067fe1980.json  index-2022-06-24T08-57-40-0525.json  target-Client-Debug-39d2cab57effe3f2764a.json
build-Service_1-Desktop_Qt_6_1_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Service_1-Desktop_Qt_6_1_3_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-26317c0fd8890f249135.json  cache-v2-6d799337574d1be9458c.json  cache-v2-fca358d627dd4e88b33d.json  codemodel-v2-187e155d124f1e759ca6.json  codemodel-v2-5ce45cf1dc27e7865531.json  index-2022-03-22T08-15-52-0089.json  (+3 more)
legacy/: weather_api.cpp
legacy/Service_1/: CMakeLists.txt
legacy/Service_1/Sources/: main.cpp
legacy/build-Client-Desktop_Qt_6_1_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt
legacy/build-Service_1-Desktop_Qt_6_1_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja
test_2/: CMakeLists.txt
test_2/Sources/: main.cpp
(+27 files in other folders)
